concord_macros/tests/trybuild/fail/sema/pagination/cursor_pagination_rejects_non_string.stderr
error[E0277]: the trait bound `concord_core::prelude::CursorPagination<Foo>: EndpointPagination<Vec<String>>` is not satisfied
  --> tests/trybuild/fail/sema/pagination/cursor_pagination_rejects_non_string.rs:13:18
   |
13 |         paginate CursorPagination<Foo> {
   |                  ^^^^^^^^^^^^^^^^^^^^^ the trait `EndpointPagination<Vec<String>>` is not implemented for `concord_core::prelude::CursorPagination<Foo>`
   |
help: the trait `EndpointPagination<Vec<String>>` is not implemented for `concord_core::prelude::CursorPagination<Foo>`
      but it is implemented for `concord_core::prelude::CursorPagination<String>`
  --> $WORKSPACE/concord_core/src/pagination/cursor.rs
   |
   | / impl<Page> EndpointPagination<Page> for CursorPagination<String>
   | | where
   | |     Page: PageItems + HasNextCursor<Cursor = String>,
   | |_____________________________________________________^
   = help: for that trait implementation, expected `String`, found `Foo`
note: required by a bound in `concord_core::prelude::PaginatedEndpoint::Pagination`
  --> $WORKSPACE/concord_core/src/endpoint.rs
   |
   |     Self::Pagination: crate::pagination::EndpointPagination<Self::Response>,
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PaginatedEndpoint::Pagination`
...
   |     type Pagination;
   |          ---------- required by a bound in this associated type

error[E0277]: the trait bound `concord_core::prelude::CursorPagination<Foo>: std::default::Default` is not satisfied
  --> tests/trybuild/fail/sema/pagination/cursor_pagination_rejects_non_string.rs:13:18
   |
13 |         paginate CursorPagination<Foo> {
   |                  ^^^^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `concord_core::prelude::CursorPagination<Foo>`
   |
help: the trait `std::default::Default` is implemented for `concord_core::prelude::CursorPagination`
  --> $WORKSPACE/concord_core/src/pagination/cursor.rs
   |
   | impl Default for CursorPagination<String> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/trybuild/fail/sema/pagination/cursor_pagination_rejects_non_string.rs:6:1
   |
 6 | / api! {
 7 | |     client CursorPaginationRejectsNonStringApi {
 8 | |         base "https://example.com"
...  |
17 | |         -> Json<Vec<String>>
18 | | }
   | | ^
   | | |
   | |_expected `Option<Foo>`, found `Option<String>`
   |   expected due to the type of this binding
   |
   = note: expected enum `Option<Foo>`
              found enum `Option<String>`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `clone` exists for enum `Option<Foo>`, but its trait bounds were not satisfied
  --> tests/trybuild/fail/sema/pagination/cursor_pagination_rejects_non_string.rs:6:1
   |
 4 |   struct Foo;
   |   ---------- doesn't satisfy `Foo: Clone`
 5 |
 6 |   api! {
   |  _^
 7 | |     client CursorPaginationRejectsNonStringApi {
 8 | |         base "https://example.com"
...  |
17 | |         -> Json<Vec<String>>
18 | | }
   | |_^ method cannot be called on `Option<Foo>` due to unsatisfied trait bounds
   |
  ::: $RUST/core/src/option.rs
   |
   |   pub enum Option<T> {
   |   ------------------ doesn't satisfy `Option<Foo>: Clone`
   |
   = note: the following trait bounds were not satisfied:
           `Foo: Clone`
           which is required by `Option<Foo>: Clone`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo` with `#[derive(Clone)]`
   |
 4 + #[derive(Clone)]
 5 | struct Foo;
   |
